# GodelBlendingUR10

./: .gitignore  .rosinstall  README.md
abb/abb_irb4400_support/urdf/: irb4400l_30_243.xacro
descartes/descartes_moveit/src/: ikfast_moveit_state_adapter.cpp
godel/godel_grinder/: CMakeLists.txt  package.xml
godel/godel_grinder/include/godel_grinder/: godel_grinder_service.h
godel/godel_grinder/src/: godel_grinder_service.cpp  node.cpp
godel/godel_msgs/: CMakeLists.txt
godel/godel_msgs/action/: GrinderStation.action
godel/godel_path_execution/src/: path_execution_service.cpp
godel/godel_process_execution/include/godel_process_execution/: blend_process_service.h
godel/godel_process_execution/launch/: blend_process_execution.launch
godel/godel_process_execution/src/: blend_process_service.cpp
godel/godel_robots/blending_end_effector/urdf/: blending_eff_macro.xacro
godel/godel_robots/ur/godel_ur10/ur10_descartes/: CMakeLists.txt  package.xml  ur10_descartes_plugins.xml
godel/godel_robots/ur/godel_ur10/ur10_descartes/include/ur10_descartes/: ur10_robot_model.h
godel/godel_robots/ur/godel_ur10/ur10_descartes/src/: ur10_robot_model.cpp
godel/godel_simple_gui/include/godel_simple_gui/: options_submenu.h
godel/godel_simple_gui/src/: options_submenu.cpp
godel/godel_simple_gui/src/uis/: grinder_configuration.ui  options_select_menu.ui
godel/godel_surface_detection/launch/: kinect2.launch
godel_openvoronoi/python_examples/issues/: openvoronoi_hang.py
godel_openvoronoi/src/: version_string.cmake
hololens/: CMakeLists.txt  package.xml
hololens/scripts/: holo.py
src/ur_modern_driver/: CMakeLists.txt
ur_modern_driver/: CMakeLists.txt
(+42 files in other folders)
