<?xml version="1.0"?>
<package format="2">
  <name>ur10_descartes</name>
  <version>0.1.0</version>
  <description>
    Defines a Descartes RobotModel plugin using the ur10_ikfast_manipulator_plugin
    for kinematics. 
  </description>

  <maintainer email="Jmeyer@swri.org">Jonathan Meyer</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>descartes_core</depend>
  <depend>descartes_moveit</depend>
  <depend>ur10_ikfast_manipulator_plugin</depend>
  <depend>pluginlib</depend>

  <export>
    <descartes_core plugin="${prefix}/ur10_descartes_plugins.xml"/>
  </export>

</package>
